test/corpus/top_level.txt
================================================================================
top-level declarations and partials
================================================================================
use partial
use import
import "common.zed"
import 'single.zed'
import """multi
line.zed"""

partial view_partial {
  relation user: user
  permission view = user
}

definition user {}

definition resource {
  ...view_partial
}
--------------------------------------------------------------------------------

(source_file
  (use_flag
    name: (identifier))
  (use_flag
    name: (identifier))
  (import
    path: (string_literal))
  (import
    path: (string_literal))
  (import
    path: (string_literal))
  (partial_definition
    name: (type_identifier)
    body: (relation
      name: (field_identifier)
      expr: (relation_expr
        (unary_relation_expr
          (relation_type
            (type_identifier)))))
    body: (permission
      name: (method_identifier)
      expr: (permission_expr
        (unary_permission_expr
          (userset
            (field_identifier))))))
  (object_definition
    name: (type_identifier))
  (object_definition
    name: (type_identifier)
    body: (partial_reference
      name: (identifier))))

================================================================================
partial declarations require their use flag
================================================================================
partial unflagged {}
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED 'a')))

================================================================================
imports require their use flag
================================================================================
import "unflagged.zed"
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (UNEXPECTED 'i')
    (string_literal)))
