test/corpus/traits.txt
================================================================================
expiration traits
================================================================================
definition resource {
  relation viewer: user with expiration
  relation editor: user with somecaveat and expiration
}
--------------------------------------------------------------------------------
(source_file
  (object_definition
    name: (type_identifier)
    body: (relation
      name: (field_identifier)
      expr: (relation_expr (unary_relation_expr
        (relation_type
          (type_identifier)
          (relation_trait (expiration_trait))))))
    body: (relation
      name: (field_identifier)
      expr: (relation_expr (unary_relation_expr
        (relation_type
          (type_identifier)
          (relation_trait (caveat_with_expiration (func_identifier)))))))))
